--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -44,6 +44,27 @@
 <button></button>
 <script>
 
+  const divs = docuemnt.querySelectorAll('div');
+
+  function logText(e) {
+    console.log(this.classList.value);
+    e.stopPropagation(); //stop bubbling this event up (i clicked the one i actually wanted, will no longer trigger events on the parents)
+  }
+
+  //document.body.addEventListener('click', logText)
+
+
+  //this is the concept of bubbling:
+  //when you click on three, two and one will also show up (zooming out and out and out)
+  //triggers clicks to the top of the document (may not show up unless you are listening for them)
+  //capture it top down, the events haven't fired yet, and then when you bubble up, the events will trigger and fire off the clicks
+
+  divs.forEach(div => div.addEventListener('click', logText, {
+    capture: false, //default is false (will capture on the way up, true means it will capture on the way down)
+    //behaves differently with stopPropagation
+    once: true //listen for click once (only ever want the button to be clicked once, will not be able to be clicked again until the page is reloaded [store check-out is a good example])
+  }));
+
 </script>
 </body>
 </html>
